<?xml version="1.0"?>
<package format="2">

   <name>rosbag_rviz_panel</name>
   <version>1.0.0</version>
   <description>The rosbag_rviz_panel package</description>

   <maintainer email="jmgonzalez@catec.aero">José Manuel González Marín</maintainer>

   <license>MIT</license>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>

  <build_depend>pluginlib</build_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>pluginlib</exec_depend>

  <build_depend>rviz</build_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>rviz</exec_depend>

  <build_depend>rosbag</build_depend>
  <build_export_depend>rosbag</build_export_depend>
  <exec_depend>rosbag</exec_depend>

  <export>
      <rviz plugin="${prefix}/rosbag_rviz_panel_description.xml"/>
  </export>

</package>
