<?xml version="1.0"?>
<package format="3">
  <name>rosbag_rviz_panel</name>
  <version>1.0.0</version>
  <description>Play and visualise rosbags in rviz2</description>
  <maintainer email="jmgonzalez@catec.aero">Jose Manuel Gonzalez Marin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <depend>pluginlib</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>rviz_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>